more bonuses and the last labs

--- a/0.6. Advanced Flask fortune-teller/templates/home.html
+++ b/0.6. Advanced Flask fortune-teller/templates/home.html
@@ -10,5 +10,6 @@
 	<h1 id="header">Home page</h1>
 	<p id="paragraph">Here you can find out your fortune</p>
 	<a href="/fortune"><p>Tell me my fortune</p></a>
+	<a href="/indecisive">Indecisive fortune</a>
 </body>
 </html>
