--- a/Login session fotune teller/templates/home.html
+++ b/Login session fotune teller/templates/home.html
@@ -5,7 +5,7 @@
 	<h1>Home page</h1>
 	<p>Here you can find out your fortune</p>
 	<img src="https://pearlriver.com/cdn/shop/articles/Fortune_Cookie_IG_medium_4d123bb9-2287-4b4d-add1-dfff0bebda54.jpg?v=1689863108">
-	<form action="{{url_for('home')}}" method="POST">
+	<form action="{{url_for('fortune')}}" method="POST">
 		<input type="text" name="birth_month" value="birth day month"><br>
 		<input type="text" name="name" value="your name"><br>
 		<input type="text" name="zodiac" value="zodiac sign"><br><br>
