--- a/auth_lab/templates/home.html
+++ b/auth_lab/templates/home.html
@@ -4,7 +4,8 @@
 <body>
 	<h1>HOME:</h1>
 	<form action="/home" method="POST">
-		<input type="text" name="quote"><br>
+		<input type="text" name="quote" placeholder="Enter quote"><br>
+		<input type="text" name="teller" placeholder="Enter name of the person that said it"><br>
 		<input type="submit" value="submit"><br>
 	</form>
 	<button><a href="/signout">signout</a></button>
