--- a/auth_lab/templates/signup.html
+++ b/auth_lab/templates/signup.html
@@ -4,8 +4,10 @@
 <body>
 	<h1>SIGN UP:</h1>
 	<form action="/" method="POST">
-		<input name="email" type="text" value="email"><br>
-		<input name="password" type="text" value="password"><br>
+		<input name="email" type="text" placeholder="Enter your email"><br>
+		<input name="password" type="text" placeholder="Enter your password"><br>
+		<input name="username" type="text" placeholder="Enter your username"><br>
+		<input name="fullname" type="text" placeholder="Enter your full name"><br>
 		<input type="submit" value="submit">
 	</form>
 	<p>Already have an acount? <a href="/signin">Sign in here</a></p>
